--- a/app/templates/s.html
+++ b/app/templates/s.html
@@ -80,5 +80,16 @@
                 </div>
             </div>
       </div>
+<script>
+    function notice(){
+      layer.msg('Demo登录账户: admin/admin', {
+        offset: 't',
+        // time: 0, 不自动关闭
+        anim: 6,
+        icon: 6,
+      }
+      );
 
+}
+</script>
 {% endblock %}
