--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -85,7 +85,7 @@
     <div class="col-md-4"></div>
     <div class="col-md-4">
         <p>© 2019 <b>
-            <span class="fan">TaskService</span>
+            <span class="fan">JobService</span>
         </b> · <a href="">隐私权和条款</a> · <a href="http://blog.sctux.com" target="_blank">博客</a> · <a href="http://github.com/guomaoqiu" target="_blank">Github项目</a></p>
     </div>
     <div class="col-md-2">
