--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,21 +1,95 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}JobService - 登录{% endblock %}
-
+{% block title %}{% endblock %}
 {% block page_content %}
-<div class="page-header">
-    <center>
-    		<img src="{{ url_for('static',filename='img/logo-taskio.png' )}}">
-    </center>
-</div>
-<div class="col-md-4"></div>
-<div class="col-md-4">
-    {{ wtf.quick_form(form) }}
-    <br>
-    <p>忘记密码？点击<a href="{{ url_for('auth.password_reset_request') }}">这里</a>找回。</p>
-    <p>新用户？点击<a href="{{ url_for('.register') }}">这里</a>注册。</p>
+    <script src="{{  url_for('static',filename='opsplatform/js/jquery-2.1.1.js') }}"></script>
+    <link href="{{  url_for('static',filename='opsplatform/css/dataTables.bootstrap.css') }}" rel="stylesheet"/>
+    <script src="{{  url_for('static',filename='opsplatform/js/layer.js') }}"></script>
+    <script src="{{  url_for('static',filename='opsplatform/js/jquery.dataTables.js') }}"></script>
+    <script src="{{  url_for('static',filename='opsplatform/js/dataTables.bootstrap.js') }}"></script>
+    <div class="row wrapper border-bottom white-bg page-heading">
+    </div>
+    <div class="wrapper wrapper-content animated fadeInRight">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="ibox float-e-margins">
+                    <div class="ibox-content">
+                        <div id="ct-chart1" class="ct-perfect-fourth"></div>
+                        <div class="panel-content">
+                        <div class="row">
+                                    
+                                       <div class="col-md-7">
+                                          <div class="jumbotron">
+                                            <h1>JobService!</h1>
+                                            <p class="lead"> 让添加执行计划任务变得更加优雅~. </p>
+                                            <p><a class="btn btn-lg btn-success" href="#" role="button">Get started today</a></p>
+                                            
 
-</div>
-<div class="col-md-4"></div>
+                                          </div>
+                                        </div>
+                                      <div class="col-md-4">
+                                          {{ wtf.quick_form(form) }}
+                                          <br>
+                                          <p>忘记密码？点击<a href="{{ url_for('auth.password_reset_request') }}">这里</a>找回。</p>
+                                          <p>新用户？点击<a href="{{ url_for('.register') }}">这里</a>注册。</p>
+
+                                      </div>
+                                   </div>
+                                        <div class="row">
+                                    <div class="col-md-4">
+                                      <div class="card" style="width: 18rem;">
+                                        <img class="card-img-top" src="http://demo1.z01.com/Template/TeSeZhan/style/images/barbarian.png" alt="Card image cap" width="160%"  >
+                                        <br>
+                                        <div class="card-body">
+                                          <h2 class="card-title">Date</h2>
+                                          <p class="card-text">是ApsCheduler中的一种调度类型，它表示在用户特定的时间点触发。类似于Linux系统中的<code>at</code>命令。</p>
+                                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        </div>
+                                      </div>
+                                    </div> 
+                                    <div class="col-md-4">
+                                      <div class="card" style="width: 18rem;">
+                                        <img class="card-img-top" src="http://demo1.z01.com/Template/TeSeZhan/style/images/goblin.png" alt="Card image cap" width="160%"  >
+                                        <br>
+                                        <div class="card-body">
+                                          <h2 class="card-title">Cron</h2>
+                                          <p class="card-text">
+                                              是ApsCheduler中的一种调度类型,完全兼容Crontab,甚至比Crontab更具有可控性。&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp                </p>
+                                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        </div>
+                                      </div>
+                                    </div> 
+                                      <div class="col-md-4">
+                                      <div class="card" style="width: 18rem;">
+                                        <img class="card-img-top" src="http://demo1.z01.com/Template/TeSeZhan/style/images/wizard.png" alt="Card image cap" width="160%" >
+                                        <br>
+                                        <div class="card-body">
+                                          <h2 class="card-title">Interval</h2>
+                                          <p class="card-text">是ApsCheduler中的一种调度类型, 表示间隔时间运行任务, 可以更加准确的获取我们需要的数据。</p>
+                                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                                        </div>
+                                      </div>
+                                    </div> 
+                                  </div>  
+                               </div>
+                          </div>
+                        </div>
+                    </div>
+                   </div>
+                </div>
+            </div>
+      </div>
+<script>
+    function notice(){
+      layer.msg('Demo登录账户: admin/admin', {
+        offset: 't',
+        // time: 0, 不自动关闭
+        anim: 6,
+        icon: 6,
+      }
+      );
+
+}
+</script>
 {% endblock %}
