--- a/app/templates/create_job.html
+++ b/app/templates/create_job.html
@@ -55,7 +55,6 @@
                                   <div class="modal-dialog">
                                     <!-- Modal content-->
                                     <div class="modal-content temp-custom-modal-content">
-                                      <button type="button" class="close temp-custom-close-button" data-dismiss="modal">&times;</button>
                                       <div class="modal-body temp-custom-modal-body">
                                         <div class="temp-login-form-wrapper">
                                           <div class="row custom-row">
@@ -64,6 +63,8 @@
                                               <div class="temp-form-column-wrap">
                                                 <h2>Cron定时任务</h2>
                                                 {{ wtf.quick_form(form_cron) }}
+                                                <button type="button" class="close temp-custom-close-button" data-dismiss="modal">取消</button>
+
                                               </div>  
                                             </div>
                                           </div>
@@ -79,7 +80,6 @@
                                   <div class="modal-dialog">
                                     <!-- Modal content-->
                                     <div class="modal-content temp-custom-modal-content">
-                                      <button type="button" class="close temp-custom-close-button" data-dismiss="modal">&times;</button>
                                       <div class="modal-body temp-custom-modal-body">
                                         <div class="temp-login-form-wrapper">
                                           <div class="row custom-row">
@@ -88,6 +88,8 @@
                                               <div class="temp-form-column-wrap">
                                                 <h2>一次性定时任务</h2>
                                                 {{ wtf.quick_form(form_date) }}
+                                                <button type="button" class="close temp-custom-close-button" data-dismiss="modal">取消</button>
+
                                               </div>  
                                             </div>
                                           </div>
@@ -103,7 +105,6 @@
                                   <div class="modal-dialog">
                                     <!-- Modal content-->
                                     <div class="modal-content temp-custom-modal-content">
-                                      <button type="button" class="close temp-custom-close-button" data-dismiss="modal">&times;</button>
                                       <div class="modal-body temp-custom-modal-body">
                                         <div class="temp-login-form-wrapper">
                                           <div class="row custom-row">
@@ -112,6 +113,8 @@
                                               <div class="temp-form-column-wrap">
                                                 <h2>间隔定时任务</h2>
                                                 {{ wtf.quick_form(form_interval) }}
+                                                <button type="button" class="close temp-custom-close-button" data-dismiss="modal">取消</button>
+
                                               </div>  
                                             </div>
                                           </div>
