--- a/app/templates/all_job_log.html
+++ b/app/templates/all_job_log.html
@@ -13,7 +13,7 @@
         <div class="col-lg-12">
             <ol class="breadcrumb">
                 <li class="active">
-                    <strong>Task</strong><br>
+                    <strong>😁</strong><br>
                 </li>
             </ol>
         </div>
