--- a/app/templates/all_job_list.html
+++ b/app/templates/all_job_list.html
@@ -109,7 +109,7 @@
           // alert(data.id)
                   swal({
                   title: "是否确定暂停任务: " + data.id,
-                  text: "^o^",
+                  text: "操作不规范，运维两行泪",
                   type: "warning",
                   showCancelButton: true,
                   showLoaderOnConfirm: true,
@@ -149,7 +149,7 @@
           // alert(data.id)
                   swal({
                   title: "是否确定恢复任务: " + data.id,
-                  text: "^o^",
+                  text: "操作不规范，运维两行泪",
                   type: "warning",
                   showCancelButton: true,
                   showLoaderOnConfirm: true,
@@ -190,14 +190,14 @@
           // alert(data.id)
                   swal({
                   title: "是否确定删除任务: " + data.id,
-                  text: "^o^",
+                  text: "操作不规范，运维两行泪",
                   type: "warning",
                   showCancelButton: true,
-                  showLoaderOnConfirm: true,
+                  showLoaderOnConfirm: false,
                   confirmButtonColor: "#DD6B55",
                   confirmButtonText: "删除~",
                   cancelButtonText: "我在想想吧...",
-                  closeOnConfirm: false,
+                  closeOnConfirm: true,
                   closeOnCancel: true  //关闭取消后还弹出让你确认的效果提示
                 },
                   function(isConfirm){
