--- a/app/templates/create_job.html
+++ b/app/templates/create_job.html
@@ -3,47 +3,71 @@
 {% block title %}{% endblock %}
 {% block page_content %}
     <script src="{{  url_for('static',filename='opsplatform/js/jquery-2.1.1.js') }}"></script>
+
     <div class="row wrapper border-bottom white-bg page-heading">
     </div>
-    <div class="wrapper wrapper-content animated fadeInRight">
+    <div class="wrapper wrapper-content">
+
         <div class="row">
             <div class="col-lg-12">
                 <div class="ibox float-e-margins">
                     <div class="ibox-content">
                         <div id="ct-chart1" class="ct-perfect-fourth"></div>
-                        <div class="panel-content">
-                                    <div class="row">
-                                    <div class="col-md-4">
-                                      <div class="card" style="width: 18rem;">
+                        <div class="panel-content ">
+                          <div class="row">
+                             <div class="col-md-4">
+                                <div class="panel panel-info">
+                                      <div class="panel-heading">
+                                        <h3 class="panel-title">添加Date job任务</h3>
+                                      </div>
+                                      <div class="panel-body">
+                                        <div class="card" style="width: 18rem;">
                                         <img class="card-img-top" src="{{  url_for('static',filename='img/barbarian.png') }}" alt="Card image cap" width="200%"  >
                                         <br>
                                         <div class="card-body">
                                           <h2 class="card-title">Date</h2>
-                                          <a class="nav-link btn btn-primary" href="#" data-toggle="modal" data-target="#DateModal" class="btn btn-primary">创建创建Date job任务</a>
+                                          <a class="nav-link btn btn-success" href="#" data-toggle="modal" data-target="#DateModal" class="btn btn-primary">Go</a>
                                         </div>
                                       </div>
-                                    </div> 
-                                    <div class="col-md-4">
-                                      <div class="card" style="width: 18rem;">
+
+                                        </div>
+                                      </div>
+                                    </div>
+                                  <div class="col-md-4">
+                                <div class="panel panel-info">
+                                      <div class="panel-heading">
+                                        <h3 class="panel-title">添加Cron job任务</h3>
+                                      </div>
+                                      <div class="panel-body">
+                                      <div class="card" style="width: 18.8rem;">
                                         <img class="card-img-top" src="{{  url_for('static',filename='img//goblin.png') }}" alt="Card image cap" width="200%"  >
                                         <br>
                                         <div class="card-body">
                                           <h2 class="card-title">Cron</h2>
-                                          <a class="nav-link btn btn-primary" href="#" data-toggle="modal" data-target="#CronModal" class="btn btn-primary">创建创建Cron job任务</a>                                        
+                                          <a class="nav-link btn btn-success" href="#" data-toggle="modal" data-target="#CronModal" class="btn btn-primary">Go</a>
                                         </div>
                                       </div>
-                                    </div> 
-                                      <div class="col-md-4">
-                                      <div class="card" style="width: 18rem;">
+                                        </div>
+                                      </div>
+                                    </div>
+                                  <div class="col-md-4">
+                                    <div class="panel panel-info">
+                                      <div class="panel-heading">
+                                        <h3 class="panel-title">添加Interval job任务</h3>
+                                      </div>
+                                      <div class="panel-body">
+                                           <div class="card" style="width: 17.4rem;">
                                         <img class="card-img-top" src="{{  url_for('static',filename='img//wizard.png') }}" alt="Card image cap" width="200%" >
                                         <br>
                                         <div class="card-body">
                                           <h2 class="card-title">Interval</h2>
-                                          <a class="nav-link btn btn-primary" href="#" data-toggle="modal" data-target="#IntervalModal" class="btn btn-primary">创建创建Interval job任务</a>   
+                                          <a class="nav-link btn btn-success" href="#" data-toggle="modal" data-target="#IntervalModal" class="btn btn-primary">Go</a>   
                                         </div>
                                       </div>
-                                    </div> 
-                                  </div>  
+                                        </div>
+                                      </div>
+                                    </div>
+                              </div>
                                </div>
 
                               <div class="modal fade" id="CronModal" role="dialog">
@@ -57,7 +81,7 @@
                                  
                                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                               <div class="temp-form-column-wrap">
-                                                
+
                                                 <h2>Cron定时任务</h2>
                                                 {{ wtf.quick_form(form_cron) }}
                                                 <button type="button" class="close temp-custom-close-button" data-dismiss="modal">取消</button>
@@ -126,7 +150,7 @@
                     </div>
                    </div>
                 </div>
-            </div>
-      </div>
+    
+  
 {% endblock %}
 
