--- a/app/templates/all_job_list.html
+++ b/app/templates/all_job_list.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
 
 {% block page_content %}
-
+    <script src="{{  url_for('static',filename='opsplatform/js/jquery-2.1.1.js') }}"></script>
 <link href="https://magicbox.bk.tencent.com/static_api/v3/assets/bootstrap-3.3.4/css/bootstrap.min.css" rel="stylesheet"/>
 <link href="https://magicbox.bk.tencent.com/static_api/v3/assets/datatables-1.10.7/dataTables.bootstrap.css" rel="stylesheet"/>
-<!-- <link href="https://magicbox.bk.tencent.com/static_api/v3/bk/css/bk.css" rel="stylesheet"> -->
 <script src="https://magicbox.bk.tencent.com/static_api/v3/assets/js/jquery-1.10.2.min.js"></script>
 <script src="https://magicbox.bk.tencent.com/static_api/v3/assets/datatables-1.10.7/jquery.dataTables.js"></script>
 <script src="https://magicbox.bk.tencent.com/static_api/v3/assets/datatables-1.10.7/dataTables.bootstrap.js"></script>
@@ -47,7 +46,39 @@
                 </div>
             </div>
         </div>
+                            <a class='nav-link btn btn-sm btn-success' data-toggle='modal' data-target='#EeitModal' class='btn btn-primary'>编辑</a>
+                            <div class="modal fade" id="EeitModal" role="dialog">
+                                <div class="temp-custom-modal-wrap">
+                                  <div class="modal-dialog">
+                                    <!-- Modal content-->
+                                    <div class="modal-content temp-custom-modal-content">
+                                      <div class="modal-body temp-custom-modal-body">
+                                        <div class="temp-login-form-wrapper">
+                                          <div class="row custom-row">
+                                 
+                                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                              <div class="temp-form-column-wrap">
 
+                                                <h2>Cron定时任务</h2>
+                                                <button type="button" class="close temp-custom-close-button" data-dismiss="modal">取消</button>
+                                                <hr>
+                                                <div class="panel panel-success">
+                                                    <div class="panel-heading">
+                                                      <h3 class="panel-title">Cron 调度器参数说明</h3>
+                                                     </div>
+                                                    <div class="panel-body">
+                                         
+                                                    </div>
+                                                </div>
+                                              </div>  
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
 
 
 <!--  -->
@@ -75,7 +106,7 @@
         pageLength : 10, //每页显示几条数据
         lengthMenu: [5, 10, 20], //每页显示选项
         pagingType: 'full_numbers',
-        bStateSave: true,
+        // bStateSave: true,
         ajax : 'v1/cron/job/show_jobs/',
         ordering: true,
         columns : [
@@ -87,9 +118,9 @@
           {data:"next_run_time",orderable: false},
           {
             data:null,
-            orderable:true,
+            orderable:false,
             render : function(data, type, row, meta){
-                return "<a class='btn btn-sm btn-danger del'>删除</a>  <a class='btn btn-sm btn-info job_info'>详情</a> <a class='btn btn-sm btn-warning pause_job'>暂停</a> <a class='btn btn-sm btn-success resume_job'>恢复</a>"
+                return "<a class='btn btn-sm btn-danger del'>删除</a>  <a class='btn btn-sm btn-info job_info'>编辑</a>  <a class='btn btn-sm btn-warning pause_job'>暂停</a> <a class='btn btn-sm btn-success resume_job'>恢复</a>"
             }
           }
 
