--- a/app/templates/create_job.html
+++ b/app/templates/create_job.html
@@ -21,11 +21,11 @@
                                         <h3 class="panel-title">添加Date job任务</h3>
                                       </div>
                                       <div class="panel-body">
-                                        <div class="card" style="width: 18.5rem;">
+                                        <div class="card" style="width: 18.9rem;">
                                         <img class="card-img-top" src="{{  url_for('static',filename='img/barbarian.png') }}" alt="Card image cap" width="200%"  >
                                         <br>
                                         <div class="card-body">
-                                          <h2 class="card-title">Date</h2>
+                                          <!-- <h2 class="card-title">Date</h2> -->
                                           <a class="nav-link btn btn-success" href="#" data-toggle="modal" data-target="#DateModal" class="btn btn-primary">Go</a>
                                         </div>
                                       </div>
@@ -39,11 +39,11 @@
                                         <h3 class="panel-title">添加Cron job任务</h3>
                                       </div>
                                       <div class="panel-body">
-                                      <div class="card" style="width: 19.3rem;">
+                                      <div class="card" style="width: 19.7rem;">
                                         <img class="card-img-top" src="{{  url_for('static',filename='img//goblin.png') }}" alt="Card image cap" width="200%"  >
                                         <br>
                                         <div class="card-body">
-                                          <h2 class="card-title">Cron</h2>
+                                          <!-- <h2 class="card-title">Cron</h2> -->
                                           <a class="nav-link btn btn-success" href="#" data-toggle="modal" data-target="#CronModal" class="btn btn-primary">Go</a>
                                         </div>
                                       </div>
@@ -56,11 +56,11 @@
                                         <h3 class="panel-title">添加Interval job任务</h3>
                                       </div>
                                       <div class="panel-body">
-                                           <div class="card" style="width: 17.9rem;">
+                                           <div class="card" style="width: 18.3rem;">
                                         <img class="card-img-top" src="{{  url_for('static',filename='img//wizard.png') }}" alt="Card image cap" width="200%" >
                                         <br>
                                         <div class="card-body">
-                                          <h2 class="card-title">Interval</h2>
+                                          <!-- <h2 class="card-title">Interval</h2> -->
                                           <a class="nav-link btn btn-success" href="#" data-toggle="modal" data-target="#IntervalModal" class="btn btn-primary">Go</a>   
                                         </div>
                                       </div>
