--- a/app/templates/all_job_list.html
+++ b/app/templates/all_job_list.html
@@ -74,7 +74,7 @@
         pagingType: 'full_numbers',
         // bStateSave: true,
         ajax : 'v1/cron/job/show_jobs/',
-        ordering: true,
+        ordering: false,
         columns : [
           {data:"id",orderable: false},
           {data:"cmd",orderable: false},
